--- a/Julia.HTML
+++ b/Julia.HTML
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Stalkers</h1>    
-    <p>Stalkers são pessoas que se tornam obssessivas por alguém, as vezes acham que tem algum tipo de relação com certa pessoa </p>
+    <p>Stalkers são pessoas que se tornam obssessivas por alguém, as vezes acham que tem algum tipo de relação com certa pessoa; imaginando, ou até alucionando sobre ter uma relação com a pessoa.</p>
+    <p>Então acabam perseguindo a pessoa, como perseguindo-o até deu local de tranalho, hackeando contas, roubando itens especificos, descobrindo seus horarios</p>
 </body>
 </html>
