--- a/Julia.HTML
+++ b/Julia.HTML
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Stalkers</h1>    
-    <p>Stalkers são pessoas que se tornam obssessivas por alguém, as vezes acham que tem algum tipo de relação com certa pessoa; imaginando, ou até alucionando sobre ter uma relação com a pessoa.</p>
-    <p>Então acabam perseguindo a pessoa, como perseguindo-o até deu local de tranalho, hackeando contas, roubando itens especificos, descobrindo seus horarios</p>
+    <p><strong>Stalkers</strong> são pessoas que se tornam obssessivas por alguém, as vezes acham que tem algum tipo de relação com certa pessoa; imaginando, ou até alucionando sobre ter uma relação com a pessoa.</p>
+    <p>Então acabam perseguindo a pessoa, como perseguindo-o até deu local de tranalho, hackeando contas, roubando itens especificos, descobrindo seus horarios.</p>
+    <p>Pessoas podem se machucar e até mesmo morrer por <strong>stalkers</strong>, eles se importam mais sobre eles e a obcessão deles, geralmente </p>
+    <img src="Stalker.jpg"
 </body>
 </html>
