--- a/Julia.HTML
+++ b/Julia.HTML
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Stalker.CSS">
 </head>
 <body>
     <h1>Stalkers</h1>   
@@ -11,6 +12,6 @@
     <p><strong>Stalkers</strong> são pessoas que se tornam obssessivas por alguém, as vezes acham que tem algum tipo de relação com certa pessoa; imaginando, ou até alucionando sobre ter uma relação com a pessoa.</p>
     <p>Então acabam perseguindo a pessoa, como perseguindo-o até deu local de tranalho, hackeando contas, roubando itens especificos, descobrindo seus horarios.</p>
     <p>Pessoas podem se machucar e até mesmo morrer por <strong>stalkers</strong>, eles se importam mais sobre eles e a obsessão deles, geralmente se sentem intituladas o suficiente para achar que mandam ou possuem essa pessoa "especial" pra eles.</p>
-    <img src="Stalker.jpg"
+    <img src="Stalker.jpg">
 </body>
 </html>
